--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: url("assets/background.jpg") repeat;
+  background: url("background.jpg") repeat;
   background-size: cover;
   font-family: monospace;
   color: #0f0;
